# maybe-dangling.rs

./: Cargo.toml  README.md  cargo_publish.sh  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
src/: lib.rs  manually_drop.rs  maybe_dangling.rs
